# sophos-cli

./: .env.example  .gitignore  README.md  pyproject.toml
sophos_cli/: __init__.py  api_client.py  main.py  utils.py
