[project]
name = "sophos-cli"
version = "0.1.0"
description = "CLI tool for Sophos Partner API management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
sophos-cli = "sophos_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
